tests/baselines/reference/objectLiteralWithSemicolons3.errors.txt
tests/cases/compiler/objectLiteralWithSemicolons3.ts(2,4): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralWithSemicolons3.ts(3,4): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralWithSemicolons3.ts(4,4): error TS1005: ':' expected.


==== tests/cases/compiler/objectLiteralWithSemicolons3.ts (3 errors) ====
    var v = {
      a;
       ~
!!! error TS1005: ':' expected.
      b;
       ~
!!! error TS1005: ':' expected.
      c;
       ~
!!! error TS1005: ':' expected.
    }